# rpunicode

./: CMakeLists.txt  DESCRIPTION  LICENSE  Makefile  NAMESPACE  README.md  configure  configure.win
man/: puny_decode.Rd  puny_encode.Rd
src/: Makevars  punycode.cpp
